# message-center-cpp

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  eventqueue_benchmark.cpp  eventqueue_benchmark.h  messagecenter_benchmark.cpp  messagecenter_benchmark.h
include/: collectionhelper.h  streamhelper.h
src/: CMakeLists.txt  eventqueue.cpp  eventqueue.h  main.cpp  messagecenter.cpp  messagecenter.h
tests/: CMakeLists.txt  eventqueue_test.cpp  eventqueue_test.h  messagecenter_test.cpp  messagecenter_test.h
